# gtm-rs

./: Cargo.toml
src/: app.rs  ctx.rs  error.rs  lib.rs  main.rs  model.rs
src/http/: health.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
tests/: test_health.rs  test_hello.rs
tests/common/: mod.rs
