[package]
name = "gtm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
axum = { version = "0.8.9", features = ["macros"] }
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tokio = { version = "1.53.1", features = ["full"] }
tower-http = { version = "0.7.0", features = ["fs"] }

[dev-dependencies]
httpc-test = "0.1.10"
