[package]
name = "gtm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.104"
axum = { version = "0.8.9", features = ["macros"] }
lazy-regex = "3.6.0"
log = "0.4.33"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
strum_macros = "0.28.0"
thiserror = "2.0.19"
tokio = { version = "1.53.1", features = ["full"] }
tower-cookies = "0.11.0"
tower-http = { version = "0.7.0", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.24.0", features = ["v4"] }

[dev-dependencies]
httpc-test = "0.1.10"
